fix: Add webkit vendor prefix to scrollbar

--- a/HTML_CSS/mein_CSS_Meister/mein_meister.css
+++ b/HTML_CSS/mein_CSS_Meister/mein_meister.css
@@ -804,7 +804,9 @@ select:disabled {
 
 /* For Chrome, Firefox, and Edge */
 .customised-scrollbar {
+	-webkit-scrollbar: thin;
 	scrollbar-width: thin;
+	-webkit-scrollbar-color: #C0C0C0 #F0F0F0;
 	scrollbar-color: #C0C0C0 #F0F0F0;
 }
 
